[package]
name = "dht"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1", features = ["derive"] }  # Serialization
serde_json = "1"  # JSON handling
rand = "0.8"  # Random number generation
sha1 = "0.10"
hex = "0.4"
threadpool = "1.8"
lazy_static = "1.4"